Footer text align fix

--- a/_sass/_Atom.scss
+++ b/_sass/_Atom.scss
@@ -486,7 +486,7 @@ footer input[type='submit'] {
     float: left;
   }
   .footer {
-    text-align: left;
+    text-align: center;
   }
 
 .footer-social {
